--- a/Week-2/week2/style.css
+++ b/Week-2/week2/style.css
@@ -46,12 +46,46 @@ section{
   width: 49%;
 }
 
-.form_container{
- width: 50%;
- margin: 0 auto;
- padding: 1rem 0;
+form{
+  width: 30%;
+  margin: 1.5rem auto 0 auto;
+  padding: 1.2rem;
 }
 
 .form_input{
-  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0;
+}
+
+.form_input input, select{
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  padding: 0.6rem;
+}
+
+.form_input input, select:focus{
+  outline: 0;
+}
+
+.form_button input{
+  background-color: rgb(87, 87, 243);
+  color: whitesmoke;
+}
+
+.form_button input:hover{
+  background-color: blueviolet;
+}
+
+footer{
+ box-shadow: 25px 25px 25px 25px #f0f0f0;
+  width: 100%;
+}
+
+.footer_container{
+  padding: 2rem 0;
+}
+
+.footer_container h3{
+  text-align: center;
 }
