--- a/Week-2/week2/style.css
+++ b/Week-2/week2/style.css
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 .main{
@@ -12,6 +13,7 @@ header{
  margin: 0 auto; 
  font-size: 2rem;
  width: 30%;
+ padding: 4rem 0 3rem 0;
 }
 
 section{
